# Atende_Pyloto

./: .gitignore  CHANGELOG_P0.md  CHANGELOG_P2.md  Comandos_Úteis.md  Dockerfile  PROMPT_CHANGELOG.md  Paleta_Pyloto.md  README.md  REGRAS_E_PADROES.md  RELATORIO_AUDITORIA_PADROES_2026-02-09.md  Reestruturação_FSM.md  STAGING_READINESS_AUDIT.md  TODO_agentesLLM.md  TODO_correcao_E2E.md  TODO_endpoint_cripto_flow.md  TODO_integra_gcalendar.md  TODO_llm.md  cloudbuild.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: Execução.agent.md
docs/: AUDITORIA_ARQUITETURA.md  Auxiliar_TODOrefatoracaoAgentes.md  CACHE_USAGE.md  CHANGELOG_P1.md  FUNCIONAMENTO.md  Monitoramento_Regras-Padroes.md  STAGING_READINESS_AUDIT.md  TODO_agentesLLM.md  TODO_correcao.md  TODO_correcao_E2E.md  TODO_refatoracao_agentes.md
docs/auditorias/: AUDITORIA_ESTRUTURA_SRC_CONCLUIDA.md
docs/queries/: metrics_dashboard.sql
docs/tarefas_concluidas/: TODO_PIPELINE_4_AGENTES.md
scripts/: diagnose_webhook.sh  migrate_session_states.py
src/ai/: README.md  __init__.py
src/ai/config/: __init__.py  agent_config.py  institutional_context.yaml  institutional_loader.py  prompt_assets_loader.py  settings.py  vertical_context_loader.py
src/ai/contexts/: institutional_context.yaml
src/ai/core/: __init__.py  client.py  contact_card_extractor_client.py  mock_client.py  otto_client.py
src/ai/models/: __init__.py  contact_card_extraction.py  decision_agent.py  event_detection.py  lead_profile_extraction.py  message_type_selection.py  otto.py  response_generation.py  state_agent.py  validation.py
src/ai/prompts/: __init__.py  agent_padrao.py  contact_card_extractor_prompt.py  context_builder.py  decision_agent_prompt.py  dynamic_context_loader.py  lead_profile_agent_prompt.py  message_type_agent_prompt.py  otto_prompt.py  response_agent_prompt.py  state_agent_prompt.py  state_prompts.py  system_role.py  validation_prompts.py
src/ai/rules/: __init__.py  fallbacks.py  intent_detection.py  otto_guardrails.py  otto_next_state.py
src/ai/services/: __init__.py  _orchestrator_helpers.py  contact_card_extractor.py  context_injector.py  decision_validator.py  lead_extractor.py  orchestrator.py  otto_agent.py  prompt_micro_agents.py  prompt_micro_agents_agents.py  prompt_micro_agents_cases.py  prompt_micro_agents_context.py  prompt_micro_agents_text.py  prompt_micro_agents_types.py
src/ai/utils/: __init__.py  _json_extractor.py  agent_parser.py  contact_card_extraction.py  context_cache.py  sanitizer.py
src/api/: __init__.py
src/api/connectors/: __init__.py
src/api/normalizers/: __init__.py
src/api/payload_builders/: __init__.py
src/api/routes/: __init__.py  router.py
src/api/validators/: __init__.py
src/app/: __init__.py  app.py
src/app/bootstrap/: __init__.py  clients.py  dependencies.py  dependencies_services.py  dependencies_stores.py  whatsapp_adapters.py  whatsapp_factory.py
src/app/constants/: whatsapp.py  whatsapp_fixed_replies.py
src/app/domain/: appointment.py  contact_card.py  contact_card_patch.py  lead_profile.py
src/app/infra/: http.py
src/app/observability/: __init__.py  correlation.py  metrics.py
src/app/protocols/: __init__.py  calendar_service.py  crypto.py  (+16 more)
src/config/: __init__.py
src/fsm/: __init__.py
tests/: conftest.py
tests/fakes/: fake_calendar_service.py
tests/fixtures/: otto_responses.yaml
tests/integration/: test_e2e_context_flow.py
tests/test_ai/: __init__.py  test_agent_prompts.py  test_ai_pipeline.py  test_config_agent_config.py  test_config_settings.py  test_contact_card_extraction_utils.py  test_contact_card_extractor.py  test_contact_card_extractor_coverage.py  test_context_builder.py  test_context_cache.py  test_context_injector.py  test_core_client.py  test_decision_validator.py  test_dynamic_context_loader.py  test_institutional_loader.py  test_lead_extractor.py  test_models_decision_agent.py  test_models_event_detection.py  test_models_message_type_selection.py  test_models_response_generation.py  test_models_state_agent.py  test_openai_client.py  test_otto_agent.py  test_otto_agent_mock.py  test_otto_client.py  test_otto_prompt.py  test_prompt_assets_loader.py  test_prompt_micro_agents.py  test_prompt_token_budget.py  test_prompts.py  test_rules_fallbacks.py  test_services_orchestrator.py  test_utils_agent_parser.py  test_utils_sanitizer.py
tests/test_app/: __init__.py
tests/test_config/: __init__.py  test_logging.py
tests/test_e2e/: test_golden_path.py  test_scheduling_golden_path.py
tests/test_fsm/: __init__.py  test_fsm_complete.py  test_fsm_machine_guard_denial.py
(+348 files in other folders)
